// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches the snapshot for an orphan user 1`] = `
<FeedBanner
  all={true}
  currentUser={
    Object {
      "avatarUrl": "me.png",
      "firstName": [Function],
      "memberships": Object {
        "count": [Function],
      },
    }
  }
  currentUserHasMemberships={false}
/>
`;

exports[`postPromptString renders a post prompt string 1`] = `"Hi anybody, what would you like to create?"`;

exports[`postPromptString renders a post prompt string 2`] = `"Hi anybody, what's on your mind?"`;

exports[`renders for all groups 1`] = `
<FeedBanner
  all={true}
  currentUser={
    Object {
      "avatarUrl": "me.png",
      "firstName": [Function],
      "memberships": Object {
        "count": [Function],
      },
    }
  }
  currentUserHasMemberships={true}
/>
`;

exports[`renders with a group 1`] = `
<FeedBanner
  group={
    Object {
      "avatarUrl": "avatar.png",
      "bannerUrl": "banner.png",
      "location": "space, duh",
      "name": "Spacebase",
    }
  }
  isTesting={true}
>
  <div
    data-stylename="banner"
  >
    <div
      data-stylename="image"
      style={
        Object {
          "backgroundImage": "url(banner.png)",
        }
      }
    >
      <div
        data-stylename="fade"
      >
        <div
          data-stylename="fade2"
        />
      </div>
      <div
        data-stylename="header"
      >
        <div
          data-stylename="logo"
          style={
            Object {
              "backgroundImage": "url(avatar.png)",
            }
          }
        />
        <div
          data-stylename="header-text"
        >
          <div
            data-stylename="header-contents"
          >
            <span
              data-stylename="header-name"
            >
              Spacebase
            </span>
            <div
              data-stylename="header-subtitle"
            >
              <Icon
                data-stylename="header-icon"
                name="Location"
              >
                <span
                  className="icon-Location"
                  data-stylename="icon"
                />
              </Icon>
              space, duh
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</FeedBanner>
`;
